// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SamwiseIcon matches snapshot. 1`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="alert"
>
  <img
    alt="alert"
    src="/svgs/alert.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 2`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Due date"
>
  <img
    alt="Due date"
    src="/svgs/calendar-dark.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 3`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Due date"
>
  <img
    alt="Due date"
    src="/svgs/calendar-light.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 4`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Checked"
>
  <img
    alt="Checked"
    src="/svgs/checked-dark.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 5`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Checked"
>
  <img
    alt="Checked"
    src="/svgs/checked.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 6`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="clock"
>
  <img
    alt="clock"
    src="/svgs/clock.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 7`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Reorder"
>
  <img
    alt="Reorder"
    src="/svgs/grabbers.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 8`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Hide"
>
  <img
    alt="Hide"
    src="/svgs/hide.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 9`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Unpin from Focus"
>
  <img
    alt="Unpin from Focus"
    src="/svgs/pin-2-dark-filled.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 10`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Pin to Focus"
>
  <img
    alt="Pin to Focus"
    src="/svgs/pin-2-dark-outline.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 11`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Unpin from Focus"
>
  <img
    alt="Unpin from Focus"
    src="/svgs/pin-2-light-filled.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 12`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Pin to Focus"
>
  <img
    alt="Pin to Focus"
    src="/svgs/pin-2-light-outline.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 13`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Settings"
>
  <img
    alt="Settings"
    src="/svgs/settings.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 14`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Show"
>
  <img
    alt="Show"
    src="/svgs/show.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 15`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Tag"
>
  <img
    alt="Tag"
    src="/svgs/tag.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 16`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="unchecked"
>
  <img
    alt="unchecked"
    src="/svgs/unchecked.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 17`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="More"
>
  <img
    alt="More"
    src="/svgs/v.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 18`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Delete"
>
  <img
    alt="Delete"
    src="/svgs/XDark.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;

exports[`SamwiseIcon matches snapshot. 19`] = `
<span
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
  title="Delete"
>
  <img
    alt="Delete"
    src="/svgs/XLight.svg"
    style={
      Object {
        "height": "1em",
        "width": "1em",
      }
    }
  />
</span>
`;
